--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,21 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-	<head>
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Morena Children's Village  &mdash; Contact</title>
+	<title>Morena Children's Village &mdash; Contact</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
-  <!-- 
+	<!-- 
 	//////////////////////////////////////////////////////
 
 	FREE HTML5 TEMPLATE 
@@ -27,12 +29,12 @@
 	//////////////////////////////////////////////////////
 	 -->
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -42,7 +44,7 @@
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -62,129 +64,134 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
-		<div id="fh5co-wrapper">
+</head>
+
+<body>
+	<div id="fh5co-wrapper">
 		<div id="fh5co-page">
-		<div class="header-top">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6 col-sm-6 text-left fh5co-link">
-						<a href="#">FAQ</a>
-						<a href="#">Forum</a>
-						<a href="#">Contact</a>
-					</div>
-					<div class="col-md-6 col-sm-6 text-right fh5co-social">
-						<a href="#" class="grow"><i class="icon-facebook2"></i></a>
-						<a href="#" class="grow"><i class="icon-twitter2"></i></a>
-						<a href="#" class="grow"><i class="icon-instagram2"></i></a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<header id="fh5co-header-section" class="sticky-banner">
-			<div class="container">
-				<div class="nav-header">
-					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Morena Children's village</a></h1>
-					<!-- START #fh5co-menu-wrap -->
-					<nav id="fh5co-menu-wrap" role="navigation">
-						<ul class="sf-menu" id="fh5co-primary-menu">
-							<li>
-								<a href="index.html">Home</a>
-							</li>
-							<li><a href="mission.html">Our Mission</a></li>
-							<li ><a href="help.html">How To Help</a></li>
-							<li class="active"><a href="contact.html">Contact</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</header>
-		
-		
-
-		<div class="fh5co-hero">
-			<div class="fh5co-overlay"></div>
-			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/japanese-embassy-childrens-home.jpg);">
-				<div class="desc animate-box">
-					<h2><strong>Contact</strong> Us</h2>
-					
-					<span><a class="btn btn-primary btn-lg" href="#">Donate Now</a></span>
-				</div>
-			</div>
-
-		</div>
-		
-		<div id="fh5co-contact" class="animate-box">
-			<div class="container">
-				<form action="#">
+			<div class="header-top">
+				<div class="container">
 					<div class="row">
-						<div class="col-md-6">
-							<h3 class="section-title">Our Address</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<ul class="contact-info">
-								<li><i class="icon-location-pin"></i>1125 mashabelo, Dikole Section, Vosloorus, 1475</li>
-								<li><i class="icon-phone2"></i>083 750 7854</li>
-								<li><i class="icon-mail"></i><a href="#">info@morenachildernsvillage.com</a></li>
-								<li><i class="icon-globe2"></i><a href="#">www.morenachildernsvillage.com</a></li>
-							</ul>
+						<div class="col-md-6 col-sm-6 text-left fh5co-link">
+							
 						</div>
-						<div class="col-md-6">
-							<div class="row">
-								<div class="col-md-6">
-									<div class="form-group">
-										<input type="text" class="form-control" placeholder="Name">
+						<div class="col-md-6 col-sm-6 text-right fh5co-social">
+							<a href="https://www.facebook.com/pages/category/Community-Organization/Morena-childrens-village-909702235790963/"
+								class="grow"><i class="icon-facebook2"></i></a>
+							<a href="https://twitter.com/MorenaVillage" class="grow"><i class="icon-twitter2"></i></a>
+							<a href="https://www.instagram.com/dithorisolwate/?hl=af" class="grow"><i
+									class="icon-instagram2"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<header id="fh5co-header-section" class="sticky-banner">
+				<div class="container">
+					<div class="nav-header">
+						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
+						<h1 id="fh5co-logo"><a href="index.html"><img src="MCV.png" alt="" class="img-fluid">Morena Children's village</a></h1>
+						<!-- START #fh5co-menu-wrap -->
+						<nav id="fh5co-menu-wrap" role="navigation">
+							<ul class="sf-menu" id="fh5co-primary-menu">
+								<li>
+									<a href="index.html">Home</a>
+								</li>
+								<li><a href="mission.html">Our Mission</a></li>
+								<li><a href="help.html">How To Help</a></li>
+								<li class="active"><a href="contact.html">Contact</a></li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</header>
+
+
+
+			<div class="fh5co-hero">
+				<div class="fh5co-overlay"></div>
+				<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5"
+					style="background-image: url(images/japanese-embassy-childrens-home.jpg);">
+					<div class="desc animate-box">
+						<h2><strong>Contact</strong> Us</h2>
+
+						<span><a class="btn btn-primary btn-lg" href="#">Donate Now</a></span>
+					</div>
+				</div>
+
+			</div>
+
+			<div id="fh5co-contact" class="animate-box">
+				<div class="container">
+					<form action="#">
+						<div class="row">
+							<div class="col-md-6">
+								<h3 class="section-title">Our Address</h3>
+								<p>Far far away, behind the word mountains, far from the countries Vokalia and
+									Consonantia, there live the blind texts.</p>
+								<ul class="contact-info">
+									<li><i class="icon-location-pin"></i>1125 mashabelo, Dikole Section, Vosloorus, 1475
+									</li>
+									<li><i class="icon-phone2"></i>083 750 7854</li>
+									<li><i class="icon-mail"></i><a href="#">info@morenachildernsvillage.com</a></li>
+									<li><i class="icon-globe2"></i><a href="#">www.morenachildernsvillage.com</a></li>
+								</ul>
+							</div>
+							<div class="col-md-6">
+								<div class="row">
+									<div class="col-md-4">
+										<div class="feature-text">
+											<h2><a href="https://www.facebook.com/pages/category/Community-Organization/Morena-childrens-village-909702235790963/"
+													class="grow"><i class="icon-facebook2"></i></a></h2>
+										</div>
 									</div>
-								</div>
-								<div class="col-md-6">
-									<div class="form-group">
-										<input type="text" class="form-control" placeholder="Email">
+									<div class="col-md-4">
+										<div class="feature-text">
+											<h2><a href="https://twitter.com/MorenaVillage" class="grow"><i
+														class="icon-twitter2"></i></a></h2>
+										</div>
 									</div>
-								</div>
-								<div class="col-md-12">
-									<div class="form-group">
-										<textarea name="" class="form-control" id="" cols="30" rows="7" placeholder="Message"></textarea>
-									</div>
-								</div>
-								<div class="col-md-12">
-									<div class="form-group">
-										<input type="submit" value="Send Message" class="btn btn-primary">
+									<div class="col-md-4">
+										<div class="feature-text">
+											<h2><a href="https://www.instagram.com/dithorisolwate/?hl=af"
+													class="grow"><i class="icon-instagram2"></i></a></h2>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-				</form>
+					</form>
+				</div>
 			</div>
-		</div>
-		<!-- END fh5co-contact -->
-		<div id="map" class="fh5co-map"></div>
-		<!-- END map -->
+			<!-- END fh5co-contact -->
 
-		
-		<footer>
-			<div id="footer">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 text-center">
-							<p class="fh5co-social-icons">
-								<a href="#"><i class="icon-twitter2"></i></a>
-								<a href="#"><i class="icon-facebook2"></i></a>
-								<a href="#"><i class="icon-instagram"></i></a>
-								<a href="#"><i class="icon-dribbble2"></i></a>
-								<a href="#"><i class="icon-youtube"></i></a>
-							</p>
-							<p>Copyright 2016 Free Html5 <a href="#">Charity</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
+			<!-- END map -->
+
+
+			<footer>
+				<div id="footer">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-6 col-md-offset-3 text-center">
+								<p class="fh5co-social-icons">
+									<a href="https://www.facebook.com/pages/category/Community-Organization/Morena-childrens-village-909702235790963/"
+										class="grow"><i class="icon-facebook2"></i></a>
+									<a href="https://twitter.com/MorenaVillage" class="grow"><i
+											class="icon-twitter2"></i></a>
+									<a href="https://www.instagram.com/dithorisolwate/?hl=af" class="grow"><i
+											class="icon-instagram2"></i></a>
+								</p>
+								<p>Copyright 2022 <a href="#">Morena Children's village</a>. All Rights <br>Made with <i
+									class="icon-heart3"></i> by <a href="http://freehtml5.co/"
+									target="_blank">Freehtml5.co</a> </p>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</footer>
-	
+			</footer>
 
-	</div>
-	<!-- END fh5co-page -->
+
+		</div>
+		<!-- END fh5co-page -->
 
 	</div>
 	<!-- END fh5co-wrapper -->
@@ -208,12 +215,13 @@
 	<script src="js/superfish.js"></script>
 
 	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
+	<script
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
 	<script src="js/google_map.js"></script>
-	
+
 	<!-- Main JS -->
 	<script src="js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
