--- a/mission.html
+++ b/mission.html
@@ -70,14 +70,12 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 col-sm-6 text-left fh5co-link">
-						<a href="#">FAQ</a>
-						<a href="#">Forum</a>
-						<a href="#">Contact</a>
+						
 					</div>
 					<div class="col-md-6 col-sm-6 text-right fh5co-social">
-						<a href="#" class="grow"><i class="icon-facebook2"></i></a>
-						<a href="#" class="grow"><i class="icon-twitter2"></i></a>
-						<a href="#" class="grow"><i class="icon-instagram2"></i></a>
+						<a href="https://www.facebook.com/pages/category/Community-Organization/Morena-childrens-village-909702235790963/" class="grow"><i class="icon-facebook2"></i></a>
+						<a href="https://twitter.com/MorenaVillage" class="grow"><i class="icon-twitter2"></i></a>
+						<a href="https://www.instagram.com/dithorisolwate/?hl=af" class="grow"><i class="icon-instagram2"></i></a>
 					</div>
 				</div>
 			</div>
@@ -234,13 +232,16 @@
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
 							<p class="fh5co-social-icons">
-								<a href="#"><i class="icon-twitter2"></i></a>
-								<a href="#"><i class="icon-facebook2"></i></a>
-								<a href="#"><i class="icon-instagram"></i></a>
-								<a href="#"><i class="icon-dribbble2"></i></a>
-								<a href="#"><i class="icon-youtube"></i></a>
+								<a href="https://www.facebook.com/pages/category/Community-Organization/Morena-childrens-village-909702235790963/"
+										class="grow"><i class="icon-facebook2"></i></a>
+									<a href="https://twitter.com/MorenaVillage" class="grow"><i
+											class="icon-twitter2"></i></a>
+									<a href="https://www.instagram.com/dithorisolwate/?hl=af" class="grow"><i
+											class="icon-instagram2"></i></a>
 							</p>
-							<p>Copyright 2016 Free Html5 <a href="#">Morena Children's village</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
+							<p>Copyright 2022 <a href="#">Morena Children's village</a>. All Rights <br>Made with <i
+								class="icon-heart3"></i> by <a href="http://freehtml5.co/"
+								target="_blank">Freehtml5.co</a> </p>
 						</div>
 					</div>
 				</div>
