--- a/mission.html
+++ b/mission.html
@@ -175,7 +175,7 @@
 					<div class="col-md-12">
 						<ul id="fh5co-portfolio-list">
 
-							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/Facebook/spot2.jpg); ">
+							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img/spot2.jpg); ">
 								<a href="#" class="color-3">
 									<div class="case-studies-summary">
 										<span>Give Love</span>
@@ -193,7 +193,7 @@
 								</a>
 							</li>
 
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/Facebook/mam.jpg); "> 
+							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img/mam.jpg); "> 
 								<a href="#" class="color-5">
 									<div class="case-studies-summary">
 										<span>Give Love</span>
@@ -201,7 +201,7 @@
 									</div>
 								</a>
 							</li>
-							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/Facebook/spot1.jpg); ">
+							<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img/spot1.jpg); ">
 								<a href="#" class="color-6">
 									<div class="case-studies-summary">
 										<span>Give Love</span>
